# expense_tracker

./: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  budgets.py  categories.py  expenses.py  notifications.py
backend/app/core/: scheduler.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  bill.py  budget.py  category.py  expense.py  notification.py  user.py
backend/app/repositories/: budget_repo.py  category_repo.py  expense_repo.py  user_repo.py
backend/app/schemas/: expense.py  user.py
backend/app/services/: auth_service.py  budget_service.py  category_service.py  expense_service.py  notification_service.py
frontend/: app.py
frontend/components/: cards.py  charts.py
frontend/pages/: 1_Dashboard.py  2_Add_Expense.py  3_Analytics.py  5_notifications.py  6_Settings.py
frontend/services/: api_client.py  auth_client.py  budget_client.py  category_client.py  expense_client.py  notification_client.py
frontend/state/: cache.py  session_manager.py
