[project]
name = "expense-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "reportlab>=4.4.10",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.56.0",
    "streamlit-echarts>=0.6.0",
]
